link/button spacing fixes

--- a/web/components/sign-up-button/sign-up-button.module.scss
+++ b/web/components/sign-up-button/sign-up-button.module.scss
@@ -17,7 +17,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
     height: inherit;
     width: inherit;
     border-radius: 100%;
-    transition: transform 1s, border-color 1s, margin-left 1s, filter 1s;
+    transition: transform 0.5s, border-color 0.5s, filter 0.5s;
     transition-timing-function: theme.$ease-in-out;
     // filter: $dropshadowDefault;
     filter: blur(2px);
@@ -34,29 +34,23 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
   .buttonText {
     width: inherit;
     height: inherit;
-    margin: 0 auto;
+    margin: 0px auto;
     text-align: center;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    transition: margin-left 1s, color 1s;
+    transition: color 0.5s;
     transition-timing-function: theme.$ease-in-out;
-    // @include theme.mobileVertical{
-    //   padding-top: 4px;
-    // }
-    // @include theme.desktopMedium{
-    //   padding-top: 6px;
-    // }
     &.buttonTextFirst {
-      // margin-left: -4px;
       position: absolute;
       transform: unset;
       z-index: 10;
     }
     &.buttonTextSecond {
-      // margin-left: 4px;
       position: absolute;
       filter:blur(5px);
+      opacity: 1;
+      transition: color 0.5s, opacity 0.5s;
     }
     &.buttonTextFirst H1, &.buttonTextFirst H2, &.buttonTextFirst p,
     &.buttonTextSecond H1, &.buttonTextSecond H2, &.buttonTextSecond p{
@@ -79,7 +73,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
     width: inherit;
     background-color: theme.$white;
     border-radius: 100%;
-    transition: transform 1s, background-color 1s;
+    transition: transform 0.5s, background-color 0.5s;
     transition-timing-function: theme.$ease-in-out;
     &.buttonFillFirst {
       transform: rotate(-5deg);
@@ -111,8 +105,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
   }
   cursor: inherit;
   color: theme.$black;
-  // filter: blur(4.8px);
-  transition: filter 1s;
+  transition: filter 0.5s;
   transition-timing-function: theme.$ease-in-out;
 
   &:hover {
@@ -125,12 +118,9 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
 
   &:hover > .buttonBorderFirst {
     transform: rotate(0deg);
-    // border: $buttonBorderHover;
-    // filter: $dropshadowHover;
   }
   &:hover > .buttonBorderSecond {
     transform: rotate(0deg);
-    // border: $buttonBorderHover;
   }
 
   &:hover > .buttonFill {
@@ -144,11 +134,10 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
     transform: rotate(0deg);
   }
   &:hover > .buttonTextFirst {
-    margin-left: -1px;
     color: theme.$primary;
   }
   &:hover > .buttonTextSecond {
-    margin-left: 0px;
+    opacity: 0;
     color: theme.$primary;
   }
   &:focus > .buttonBorder {
